typescript/checker/tests/conformance/es6/Symbols/symbolType3.ts.stderr
error: ReadOnly {
    span: Span {
        lo: BytePos(
            42,
        ),
        hi: BytePos(
            57,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType3.ts:3:8
  |
3 | delete Symbol.iterator;
  |        ^^^^^^^^^^^^^^^

error: UpdateOpToSymbol {
    span: Span {
        lo: BytePos(
            116,
        ),
        hi: BytePos(
            117,
        ),
        ctxt: #0,
    },
    op: "++",
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType3.ts:6:3
  |
6 | ++s;
  |   ^

error: UpdateOpToSymbol {
    span: Span {
        lo: BytePos(
            122,
        ),
        hi: BytePos(
            123,
        ),
        ctxt: #0,
    },
    op: "--",
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType3.ts:7:3
  |
7 | --s;
  |   ^

error: NumericUnaryOpToSymbol {
    span: Span {
        lo: BytePos(
            128,
        ),
        hi: BytePos(
            136,
        ),
        ctxt: #0,
    },
    op: "+",
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType3.ts:8:3
  |
8 | + Symbol();
  |   ^^^^^^^^

error: NumericUnaryOpToSymbol {
    span: Span {
        lo: BytePos(
            141,
        ),
        hi: BytePos(
            149,
        ),
        ctxt: #0,
    },
    op: "-",
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType3.ts:9:3
  |
9 | - Symbol();
  |   ^^^^^^^^

error: NumericUnaryOpToSymbol {
    span: Span {
        lo: BytePos(
            154,
        ),
        hi: BytePos(
            162,
        ),
        ctxt: #0,
    },
    op: "~",
}
  --> $DIR/tests/conformance/es6/Symbols/symbolType3.ts:10:3
   |
10 | ~ Symbol();
   |   ^^^^^^^^

error: NumericUnaryOpToSymbol {
    span: Span {
        lo: BytePos(
            181,
        ),
        hi: BytePos(
            196,
        ),
        ctxt: #0,
    },
    op: "+",
}
  --> $DIR/tests/conformance/es6/Symbols/symbolType3.ts:13:2
   |
13 | +(Symbol() || 0);
   |  ^^^^^^^^^^^^^^^

